Fix width overflow

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  width: 100vw;
+  max-width: 100vw;
   font-family: "Barlow", sans-serif;
   background-color: #3ebfff;
 }
@@ -25,6 +25,9 @@ header img {
   height: 20px;
   width: auto;
   margin-left: 20px;
+}
+header nav img {
+  display: none;
 }
 header nav ul {
   display: flex;
@@ -50,7 +53,9 @@ header nav ul .header_link:last-child a {
 }
 
 .hero {
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: -1;
   height: 100vh;
   background-image: url("../images/desktop/image-header.jpg");
   background-repeat: no-repeat;
@@ -70,7 +75,7 @@ header nav ul .header_link:last-child a {
   text-transform: uppercase;
   letter-spacing: 0.2em;
 }
-.hero img {
+.hero a {
   position: absolute;
   top: 320px;
   left: 50%;
